testsuite/tests/warnings/should_fail/all.T
test('WerrorFail', normal, compile_fail, [''])
